--- a/assests/CSS/index.css
+++ b/assests/CSS/index.css
@@ -146,7 +146,6 @@ header .header-cases {
 }
 
 /*INDEX*/
-
 .index-banner {
     width:100%;
     height: calc(100vh - 100px);
@@ -154,18 +153,23 @@ header .header-cases {
     background-repeat: no-repeat;
     background-position:center;
     background-size: cover; 
+    display: table;
+}
+
+.vertical-center {
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .index-banner h2 {
     font-family: Catamaran;
-    font-size :60px;
+    font-size :51px;
     color:white;
     text-align: center;
     line-height: 70px;
     font-weight: 900;
     text-shadow: 2px 2px 8px black;
 }
-
 .index-banner h1 {
     font-family: Cormorant Garamond;
     font-size :28px;
