--- a/assests/CSS/index.css
+++ b/assests/CSS/index.css
@@ -181,6 +181,23 @@ header .header-cases {
     text-shadow: 2px 2px 8px black;
 }
 
+.index-links div {
+    margin: 16px 16px 0;
+    width: calc(100% - 32px);
+    height: 100px;
+    background-color: lightgray;
+}
+
+.index-links div h3{
+    font-family: Catamaran;
+    font-size :28px;
+    font-weight: 600;
+    line-height: 100px;
+    color:black;
+    text-align: center;
+    text-transform: uppercase;
+}
+
 /* @media only screen and (min-width: 400px) {
  
 }
