--- a/assests/CSS/index.css
+++ b/assests/CSS/index.css
@@ -106,7 +106,7 @@ body{
 }
 header {
     position: fixed;
-    background-color: white;
+    background-color:black;
     width: 100%;
     height: 100px;
 }
@@ -115,7 +115,7 @@ header .header-brand {
     font-family: Catamaran;
     font-size :24px;
     font-weight : 900;
-    color:black;
+    color:white;
     text-transform: uppercase;
     display: block;
     margin: 0 auto;
@@ -131,7 +131,6 @@ header nav ul {
 }
 header nav ul li {
     display: inline-block;
-    float: left;
     list-style: none;
     padding : 0 16px;
 }
@@ -139,7 +138,7 @@ header nav ul li {
 header nav ul li a {
     font-family: Catamaran;
     font-size :16px;
-    color:black;
+    color:white;
 }
 
 header .header-cases {
@@ -147,7 +146,7 @@ header .header-cases {
 }
 
 /*INDEX*/
-.index-banner {
+/* .index-banner {
     width:100%;
     height: calc(100vh - 100px);
     background-image: url("/assests/img/real-space-wallpaper-5.jpg");
@@ -155,24 +154,28 @@ header .header-cases {
     background-position:center;
     background-size: cover; 
     display: table;
+} */
+
+.parallax-1 {
+    height:600px;
+    width:100%;
+    text-align: center;
+}
+.parallax-inner{
+    padding-top: 120px;
+    padding-bottom: 200px;
 }
 
-.vertical-center {
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.index-banner h2 {
+.title-statement h2 {
     font-family: Catamaran;
-    font-size :51px;
+    font-size :31px;
     color:white;
     text-align: center;
     line-height: 70px;
     font-weight: 900;
     text-shadow: 2px 2px 8px black;
-    padding: 0 25px;
 }
-.index-banner h1 {
+.title-statement h1 {
     font-family: Cormorant Garamond;
     font-size :28px;
     font-weight: 100;
@@ -181,17 +184,17 @@ header .header-cases {
     color:white;
     text-align: center;
     text-shadow: 2px 2px 8px black;
-    padding: 5px 5px;
 }
-
-.index-links div {
-    margin: 16px 16px 0;
-    width: calc(100% - 10px);
-    height: 100px;
-    background-color: lightgray;
+.index-texts {
+    margin-right: auto;
+    margin-left:auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: black;
 }
-
-.index-links div h3{
+.index-text div h3{
     font-family: Catamaran;
     font-size :28px;
     font-weight: 600;
@@ -200,10 +203,13 @@ header .header-cases {
     text-align: center;
     text-transform: uppercase;
 }
-
+.clearfix{
+    clear: both;
+}
 .parallax-window {
-    min-height: 500px;
-    background: transparent;
+    height:568px;
+    width:100%;
+    display:block;
 }
 
 /* @media only screen and (min-width: 400px) {
