--- a/assests/CSS/index.css
+++ b/assests/CSS/index.css
@@ -200,10 +200,15 @@ header ul li a:hover:after{
 
 
 @media screen and (max-width: 700px) {
-    /* .social-wrapper{
-        margin-left: auto;
-        margin-right: auto;
-    } */
+    .social-icons li{
+        margin: 40px 20px;
+    }
+
+    .title-statement h2{
+        margin-top: 15%;
+        font-size:28px; 
+    }
+    
     .menu-toggle{
         display: block;
     }
@@ -240,5 +245,5 @@ header ul li a:hover:after{
         display: flex;
         transform: scale(1);
         opacity: 1;
-    }
+    }  
 } 
