--- a/assests/CSS/index.css
+++ b/assests/CSS/index.css
@@ -23,11 +23,17 @@ body, html{
 
 .image-cover{
     background-image: url("/assests/img/real-space-wallpaper-5.jpg");
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    background-position: center;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    overflow: auto;
 }
 
 .container{
@@ -157,7 +163,7 @@ body ul li a:hover:after{
 }
 .title-statement h2 {
     padding-top: 100px;
-    font-size :30px;
+    font-size :36px;
     color:white;
     text-align: center;
     line-height: 65px;
@@ -191,7 +197,7 @@ body ul li a:hover:after{
     list-style: none;
     display: inline-block;
     font-size: 30px;
-    padding: 25px 30px;
+    padding: 25px 30px; 
     color: #fff;
     border: 1px solid #fff;
     border-radius: 50%;
