--- a/assests/CSS/index.css
+++ b/assests/CSS/index.css
@@ -25,12 +25,12 @@ body, html{
     background-image: url("/assests/img/real-space-wallpaper-5.jpg");
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
     height: 100%;
     margin: auto;
     overflow: auto;
@@ -196,7 +196,7 @@ body ul li a:hover:after{
 .social-icons li{
     list-style: none;
     display: inline-block;
-    font-size: 30px;
+    font-size: 40px;
     padding: 25px 30px; 
     color: #fff;
     border: 1px solid #fff;
